Fixed bugs in index page, added calls to all APIs
Fixes a bug where the table wouldn't draw correctly with ellipses and
truncation.

Added tab panes to display all API endpoints on homepage.

--- a/www/public/sass/style.scss
+++ b/www/public/sass/style.scss
@@ -4,8 +4,12 @@ body {
   padding-top: 70px;
 }
 
-#datatable {
+.mydatatable {
   table-layout: fixed;
+}
+
+.tab-content {
+  margin-top: 20px;
 }
 
 .dataTable td {
